--- a/src/components/pizza/pizzaBlock.scss
+++ b/src/components/pizza/pizzaBlock.scss
@@ -1,3 +1,5 @@
+$color_1: #a20606;
+$br: 5px;
 .food {
   display: flex;
   flex-wrap: wrap;
@@ -15,74 +17,74 @@
     margin: 15px 10px;
     text-align: center;
 
-    .food-image {
+    img {
       width: 300px;
       height: 300px;
-      border: 1px #a20606 solid;
+      border: 1px $color_1 solid;
     }
     .food__title {
-      // margin: 0px 15px;
-      text-shadow: 2px 1px #a20606;
+      text-shadow: 2px 1px $color_1;
       font-size: 25px;
     }
     .food-descriptions {
       font-size: 20px;
       line-height: 25px;
     }
-  }
-  .button {
-    display: flex;
-    justify-content: space-evenly;
-    width: 350px;
+    .pizza-selector {
+      border: 1px solid lightgray;
+      padding: 10px;
+      width: 300px;
+      background-color: rgb(240, 237, 237);
+      border-radius: $br;
 
-    .totalPrice {
-      color: #a20606;
-      font-size: 25px;
-      margin: 10px 0px;
+      ul {
+        display: flex;
+        padding: 2px;
+        justify-content: space-between;
+        align-items: center;
+        span {
+          font-size: 18px;
+          margin: 0px 15px 5px 0px;
+        }
+        li {
+          list-style: none;
+          padding: 8px;
+          cursor: pointer;
+          font-weight: 600;
+          font-size: 14px;
+
+          &.active {
+            background-color: aliceblue;
+            box-shadow: 0px 2px 4px darkgray;
+            border-radius: $br;
+            cursor: auto;
+          }
+        }
+      }
     }
-    .button-link {
-      cursor: pointer;
-      letter-spacing: 3px;
-      width: 180px;
-      height: 50px;
-      border-radius: 20px;
-      font-size: 20px;
-      background-color: #a20606;
-      border: none;
-      color: aliceblue;
-    }
-  }
-}
+    .button {
+      display: flex;
+      justify-content: space-evenly;
+      width: 350px;
 
-.pizza-selector {
-  border: 1px solid lightgray;
-  padding: 10px;
-  width: 300px;
-  background-color: rgb(240, 237, 237);
-  border-radius: 5px;
-  // margin: 5px;
-
-  ul {
-    display: flex;
-    padding: 2px;
-    justify-content: space-between;
-    align-items: center;
-    .title {
-      font-size: 18px;
-      margin: 0px 15px 5px 0px;
-    }
-    li {
-      list-style: none;
-      padding: 8px;
-      cursor: pointer;
-      font-weight: 600;
-      font-size: 14px;
-
-      &.active {
-        background-color: aliceblue;
-        box-shadow: 0px 2px 4px darkgray;
-        border-radius: 5px;
-        cursor: auto;
+      .totalPrice {
+        color: $color_1;
+        font-size: 25px;
+        margin: 10px 0px;
+        span {
+          color: black;
+        }
+      }
+      button {
+        cursor: pointer;
+        letter-spacing: 3px;
+        width: 180px;
+        height: 50px;
+        border-radius: $br * 4;
+        font-size: 20px;
+        background-color: $color_1;
+        border: none;
+        color: aliceblue;
       }
     }
   }
@@ -103,77 +105,68 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-  }
-  .adds__content {
-    width: 200px;
-    height: 267px;
-    margin: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-  }
 
-  .adds__img {
-    text-align: center;
-  }
+    .adds__content {
+      width: 250px;
+      height: 267px;
+      margin: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      .adds-button {
+        width: 200px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        color: $color_1;
+        font-size: 20px;
 
-  .adds__text {
-    font-size: 20px;
-  }
+        span {
+          color: black;
+        }
 
-  .adds__image {
-    width: 90px;
-    height: 90px;
-  }
+        button {
+          cursor: pointer;
+          letter-spacing: 3px;
+          width: 120px;
+          height: 40px;
+          border-radius: $br * 4;
+          font-size: 20px;
+          background-color: $color_1;
+          border: none;
+          color: aliceblue;
+        }
+      }
 
-  .adds__price {
-    line-height: 10px;
-    text-align: center;
-    font-size: 20px;
-    border: 1px solid lightgray;
-    padding: 10px;
-    margin: 10px;
-    background-color: rgb(240, 237, 237);
-    cursor: pointer;
-    .activePrice {
-      background-color: aliceblue;
-      box-shadow: 0px 2px 4px darkgray;
-      border-radius: 5px;
+      .adds__text {
+        font-size: 20px;
+      }
+
+      img {
+        width: 90px;
+        height: 90px;
+      }
+
+      .adds__price {
+        width: 130px;
+        text-align: center;
+        font-size: 20px;
+        border: 1px solid lightgray;
+        padding: 10px;
+        margin: 10px;
+        background-color: rgb(240, 237, 237);
+        cursor: pointer;
+        border-radius: $br;
+        p {
+          padding: 4px;
+        }
+        .activePrice {
+          background-color: aliceblue;
+          box-shadow: 0px 2px 4px darkgray;
+          border-radius: $br;
+        }
+      }
     }
   }
-
-  .adds__button {
-    text-align: center;
-    padding-top: 15px;
-    margin: 20px;
-    width: 180px;
-    height: 45px;
-    background-color: #a20606;
-    border-radius: 20px;
-  }
-
-  .adds__button-link {
-    color: white;
-    letter-spacing: 3px;
-    font-size: 20px;
-  }
 }
-// .countProduct {
-//   display: flex;
-//   font-size: 25px;
-//   margin: 5px;
-//   .counter {
-//     font-size: 25px;
-//     margin: 5px;
-//     background-color: white;
-//     border: none;
-//     color: #a20606;
-//     cursor: pointer;
-//   }
-//   .count {
-//     border: 1px solid grey;
-//     border-radius: 4px;
-//     padding: 4px 8px;
-//   }
-// }
