--- a/src/components/fastFood/fastFood.scss
+++ b/src/components/fastFood/fastFood.scss
@@ -14,7 +14,7 @@
     border: 1px #a20606 solid;
   }
   .foodBlock__name {
-    text-shadow: 2px 1px #a20606;
+    // text-shadow: 2px 1px #a20606;
     font-size: 25px;
     margin-bottom: 10px;
   }
