--- a/src/components/home/slider/slider.scss
+++ b/src/components/home/slider/slider.scss
@@ -1,37 +1,137 @@
-.slider {
-  box-sizing: border-box;
-  width: 100%;
-  height: 400px;
+.container {
+  padding: 1rem 1rem;
+  margin: 0 auto;
 
-  margin: 25px 0px;
-  .slider__button {
-    width: 95%;
-    display: flex;
-    justify-content: space-between;
-    .slider__button-left {
+  h1 {
+    text-align: center;
+    padding: 10px 0;
+    // color: #a20606;
+  }
+  .tranding-slide-content {
+    width: 90%;
+    height: 75%;
+    position: absolute;
+    top: 0;
+    color: white;
+    .food-price {
       position: absolute;
-      top: 250px;
-      left: 25px;
+      right: 0;
+      // display: flex;
+      // justify-content: flex-end;
     }
-    .slider__button-right {
+    .tranding-slide-content-bottom {
       position: absolute;
-      top: 250px;
-      right: 25px;
+      bottom: 0;
+      padding-left: 10px;
+      .food-name {
+        font-size: 30px;
+      }
+      .food-rating {
+        display: flex;
+        span {
+          font-size: 20px;
+        }
+        .rating {
+          color: gold;
+          padding-left: 5px;
+          // background-color: white;
+        }
+      }
     }
   }
 }
-.item {
+
+.swiper_container {
+  height: 27rem;
+  position: relative;
+}
+
+.swiper-slide {
+  width: 27rem;
+  position: relative;
+}
+
+.swiper-slide img {
+  width: 400px;
+  height: 350px;
+  border-radius: 2rem;
+  object-fit: cover;
+}
+
+.swiper-slide-shadow-left,
+.swiper-slide-shadow-right {
+  display: none;
+}
+
+.slider-controler {
+  position: relative;
+  bottom: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 90%;
-  margin: 0 auto;
-  overflow: hidden;
+}
 
-  .slider-img {
-    padding: 10px;
-    border-radius: 15px;
-    width: 50%;
-    height: 300px;
+.slider-controler .swiper-button-next {
+  left: 58% !important;
+  transform: translateX(-58%) !important;
+}
+
+@media (max-width: 990px) {
+  .slider-controler .swiper-button-next {
+    left: 70% !important;
+    transform: translateX(-70%) !important;
   }
+}
+
+@media (max-width: 450px) {
+  .slider-controler .swiper-button-next {
+    left: 80% !important;
+    transform: translateX(-80%) !important;
+  }
+}
+
+@media (max-width: 990px) {
+  .slider-controler .swiper-button-prev {
+    left: 30% !important;
+    transform: translateX(-30%) !important;
+  }
+}
+
+@media (max-width: 450px) {
+  .slider-controler .swiper-button-prev {
+    left: 20% !important;
+    transform: translateX(-20%) !important;
+  }
+}
+
+.slider-controler .slider-arrow {
+  background: white;
+  width: 3rem;
+  border-radius: 50%;
+  left: 42%;
+  transform: translateX(-42%);
+  filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
+}
+
+.slider-controler .slider-arrow ion-icon {
+  font-size: 2rem;
+  color: #222224;
+}
+
+.slider-controler .slider-arrow::after {
+  content: "";
+}
+
+.swiper-pagination {
+  position: relative;
+  width: 15rem !important;
+  bottom: 1rem;
+}
+
+.swiper-pagination .swiper-pagination-bullet {
+  filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
+}
+
+.swiper-pagination .swiper-pagination-bullet-active {
+  background: gold;
 }
